--- a/cafeproject/mainpage/templates/main.html
+++ b/cafeproject/mainpage/templates/main.html
@@ -1,51 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>hackaton sample</title>
-        <!--head부분 css/bootstrap 스크립트 추가부분 따로 빼던가 안빼도 되고-->
-         {% load staticfiles %}
-         <link rel="stylesheet" href="{% static 'css/main.css' %}?ver=1.1" >
-         <script type="text/javascript" src="{% static "js/main.js" %}"></script>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/js/mdb.min.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        
-    </head>
-
-    <!--header수정요함-->
-    <body style="margin:0px;">
-    <div class = "header">
-        <div class ="head">
-  <ul class="pull-right">
-     <!--<a href="./main.html"><img src="./logo.png" width=100px height=50px></a>-->
-       
-                
-                <li><a href="#">HOME</a></li>
-                <li><a href="{%url 'index'%}">SEARCH</a></li>
-
-                <li class="pull-left"><a href="#">TEXTAREA</a></li>
-                <li class="pull-left"><a href="#">TEXTAREA</a></li>
-                
-            </ul>
-          
-        </div>
-        <div class = "logo">
-           <h1>cafe project</h1>
-           
-
-        </div>
-    </div>
- 
+{% extends 'base.html' %}
+{% block import %}
+{% endblock%}
 
          <!--1-->
 
@@ -53,8 +8,8 @@
          <input type="text" name="input" class="input" id="search-input">
          <button type="reset" class="search" id="search-btn"></button>
          </form>-->
-
-         <div class="search-overlay"></div>
+{% block contents %}
+<div class="search-overlay"></div>
 <div class="scroll-cont">
   <div class="content">
     <div class="search">
@@ -160,5 +115,5 @@
 
     </div>
 
-     </body>
-</html>
+ 
+{% endblock %}
