--- a/cafeproject/postapp/templates/post.html
+++ b/cafeproject/postapp/templates/post.html
@@ -17,14 +17,32 @@
         <a class="alert alert-danger" href="{% url 'write' %}" role="button"> POST </a>
         <div>
             <br><br>
-            {% for post in postss %}
+        <div class="row">
+        {% for post in postss %}
+        
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <img class="card-img-top" src="{{ post.image.url }}" alt=" Card image cap">
+            <div class="card-body">
+            <h5>{{ post.title }}</h5>
+              <p class="card-text">{{ post.summary }}</p>
+              <div class="d-flex justify-content-between align-items-center">
+              <small class="text-muted">카페 위치 넣는 자리 </small>
+                <a class="alert alert-danger" href="{% url 'detail' post.id %}" role="button"> 자세히 보기</a>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+   
+        <!--<div class = "row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <img class="card-img-top" src="{{ post.image.url }}" alt=" Card image cap">
                     <div class="card-body">
-                        <!--카페이름-->
+                        
                         <h5>{{ post.title }}</h5>
-                         <!--카페요약-->
+                        
                         <p class="card-text">{{ post.summary }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <small class="text-muted">카페 위치 넣는 자리 </small>
@@ -34,8 +52,12 @@
                     </div>
                 </div>
             </div>
+       </div>-->
+        
             {% endfor %}
-        </div>
+         </div>
+      </div>
+    
         
 
 
