--- a/cafeproject/mainpage/static/css/main.css
+++ b/cafeproject/mainpage/static/css/main.css
@@ -46,6 +46,7 @@
   font-display: right;
   font-weight: bold;
   padding: 10px 10px;
+  padding-top: 10px;
   text-decoration: none;
 }
 .pull-left {
