--- a/cafeproject/postapp/templates/post.html
+++ b/cafeproject/postapp/templates/post.html
@@ -4,7 +4,7 @@
 {% block import %}
 {% endblock%}
 
-
+{% load staticfiles %}
 
 {% block contents %}
 
@@ -26,8 +26,10 @@
             <div class="card-body">
             <h5>{{ post.title }}</h5>
               <p class="card-text">{{ post.summary }}</p>
+              <input type="image" src="{% static 'like.jpg'%}" height="30" width ="30" class="like" name="{{ post_id }}" value="Like">
+             <p id="count{{ post_id }}"> 좋아요 {{ post_id}} 개</p>
               <div class="d-flex justify-content-between align-items-center">
-              <small class="text-muted">카페 위치 넣는 자리 </small>
+               <small class="text-muted">{{post.area}}</small>
                 <a class="alert alert-danger" href="{% url 'detail' post.id %}" role="button"> 자세히 보기</a>
                 
               </div>
