search update commit

--- a/cafeproject/searchapp/templates/index.html
+++ b/cafeproject/searchapp/templates/index.html
@@ -30,9 +30,9 @@
         </fieldset>
 
         <fieldset>
-            <legend>heart</legend>
-             {% for heart in heart_list %}
-             <input type = "checkbox" value= "heart">{{heart.heart}}
+            <legend>star</legend>
+             {% for star in star_list %}
+             <input type = "checkbox" value= "star">{{star.star}}
              {% endfor %}
         </fieldset>
 
