--- a/cafeproject/mainpage/templates/base.html
+++ b/cafeproject/mainpage/templates/base.html
@@ -45,10 +45,19 @@
                 
                 <li><a href="{%url 'start'%}">HOME</a></li>
                 <li><a href="{%url 'index'%}">SEARCH</a></li>
-                
+                <li class="pull-left"><a href="{% url 'signup' %}">signup</a></li>
+            <li class="pull-left"><a href="{% url 'login' %}">login</a></li>
+            <li class="pull-left"><a href="{% url 'logout' %}">logout</a></li>
+            <li class="pull-left"><a href="{% url 'post' %}">POST</a></li>
 
-                <li class="pull-left"><a href="#">TEXTAREA</a></li>
-                <li class="pull-left"><a href="{% url 'post' %}">POST</a></li>
+
+            {% if user.is_authenticated %}
+            <li class="pull-left"><a href="{% url 'post' %}">환영합니다. {{ user.username }} 님!</a></li>
+            <form id="logout" method="POST" action="{% url 'logout' %}">
+                {% csrf_token %} <input type="hidden" />
+            </form>
+            
+            {% endif %}
 
                 
             </ul>
