--- a/cafeproject/searchapp/templates/index.html
+++ b/cafeproject/searchapp/templates/index.html
@@ -15,30 +15,29 @@
     <br/>
     <br/>
     <h3>Tag Search</h3>
+
+    <form action = "{% url 'result' %}" method="GET">
         <fieldset>
             <legend>location</legend>
              {% for location in location_list %}
-             <input type = "checkbox" value= "location">{{location.location}}
+             <input type = "radio" name = "location" value = "{{location.location}}">{{location.location}}
              {% endfor %}
         </fieldset>
-
         <fieldset>
             <legend>feature</legend>
              {% for feature in feature_list %}
-             <input type = "checkbox" value= "feature">{{feature.feature}}
+             <input type = "radio" name = "features" value= "{{feature.feature}}">{{feature.feature}}
              {% endfor %}
         </fieldset>
-
         <fieldset>
             <legend>star</legend>
              {% for star in star_list %}
-             <input type = "checkbox" value= "star">{{star.star}}
+             <input type = "radio" name = "star" value= "{{star.star}}">{{star.star}}
              {% endfor %}
         </fieldset>
-
         <br/>
         <input type="submit" value="tag searh">
-        <br/>
+    </form>
         <br/>
     <h2>현재 카페 목록</h2>
     {% for post_obj in post %}
