--- a/cafeproject/searchapp/templates/result.html
+++ b/cafeproject/searchapp/templates/result.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <h3 id = "result">"{{ obj }}"에 대한 검색 결과입니다.</h3> <!-- views.py에서 불러들인 데이터를 사용 -->
-    {% for post_obj in post %} 
-        
-        {% if post_obj.title == obj_list.0 and post_obj.location == obj_list.1 and post_obj.feature == obj_list.2 %}
-            <li>{{post_obj.title}} - {{post_obj.location}} (feature: {{post_obj.feature}}) star: {{post_obj.starrate}}</li>
-        {% endif %}
-        
-        {% if post_obj.title == obj or post_obj.location == obj or post_obj.feature == obj %}
-            <li>{{post_obj.title}} - {{post_obj.location}} (feature: {{post_obj.feature}}) star: {{post_obj.starrate}}</li>
+    <h3>Searching Test</h3>
+    <form action="{% url 'result' %}" method="GET">
+        <!-- 바로 result.html로 넘어가도록 -->
+        <input type="search" value="" name='searching' /> <!-- 검색어 얻어내기 위해 name 추가 -->
+        <input type="submit" value="search">
+    </form>
+    <br />
+    <br />
+    <h3>Tag Search</h3>
+
+    <form action="{% url 'result' %}" method="GET">
+        <fieldset>
+            <legend>location</legend>
+            {% for location in location_list %}
+            <input type="radio" name="location" value="{{location.location}}">{{location.location}}
+            {% endfor %}
+        </fieldset>
+        <fieldset>
+            <legend>feature</legend>
+            {% for feature in feature_list %}
+            <input type="radio" name="features" value="{{feature.feature}}">{{feature.feature}}
+            {% endfor %}
+        </fieldset>
+        <fieldset>
+            <legend>star</legend>
+            {% for star in star_list %}
+            <input type="radio" name="star" value="{{star.star}}">{{star.star}}
+            {% endfor %}
+        </fieldset>
+        <br />
+        <input type="submit" value="tag searh">
+    </form>
+    <br />
+    <h2>현재 카페 목록</h2>
+    {% for post_obj in post %}
+    <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}
+    </li>
+    {% endfor %}
+    <h3 id="result">"{{ obj }}"에 대한 검색 결과입니다.</h3> <!-- views.py에서 불러들인 데이터를 사용 -->
+    {% for result_obj in post %}
+        {% if result_obj.location == obj %}
+            <h2>찾음</h2>
         {% else %}
-            <h4>검색 결과가 없습니다.</h4>
+            <h3>없음</h3>
         {% endif %}
     {% endfor %}
 </body>
+
 </html>
