search update commit

--- a/cafeproject/searchapp/templates/index.html
+++ b/cafeproject/searchapp/templates/index.html
@@ -26,7 +26,7 @@
         <fieldset>
             <legend>feature</legend>
              {% for feature in feature_list %}
-             <input type = "radio" name = "features" value= "{{feature.feature}}">{{feature.feature}}
+             <input type = "radio" name = "feature" value= "{{feature.feature}}">{{feature.feature}}
              {% endfor %}
         </fieldset>
         <fieldset>
