--- a/cafeproject/mainpage/templates/base.html
+++ b/cafeproject/mainpage/templates/base.html
@@ -5,7 +5,7 @@
         <title>hackaton sample</title>
         <!--head부분 css/bootstrap 스크립트 추가부분 따로 빼던가 안빼도 되고-->
          {% load staticfiles %}
-         <link rel="stylesheet" href="{% static 'css/main.css' %}?ver=1.2" >
+         <link rel="stylesheet" href="{% static 'css/main.css' %}?ver=1.5" >
          <script type="text/javascript" src="{% static "js/main.js" %}"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,11 +41,11 @@
          <div class ="head">
         <ul class="pull-right">
      <!--<a href="./main.html"><img src="./logo.png" width=100px height=50px></a>-->
-       
+       <!--<li><a href="{%url 'start'%}">HOME</a></li>
+            <li><a href="{%url 'index'%}">SEARCH</a></li>-->
                 
-                <li><a href="{%url 'start'%}">HOME</a></li>
-                <li><a href="{%url 'index'%}">SEARCH</a></li>
-                <li class="pull-left"><a href="{% url 'signup' %}">signup</a></li>
+            
+            <li class="pull-left"><a href="{% url 'signup' %}">signup</a></li>
             <li class="pull-left"><a href="{% url 'login' %}">login</a></li>
             <li class="pull-left"><a href="{% url 'logout' %}">logout</a></li>
             <li class="pull-left"><a href="{% url 'post' %}">POST</a></li>
