--- a/cafeproject/startpage/templates/start.html
+++ b/cafeproject/startpage/templates/start.html
@@ -5,11 +5,11 @@
         <title>hackaton sample</title>
         <!--head부분 css/bootstrap 스크립트 추가부분 따로 빼던가 안빼도 되고-->
         {% load staticfiles %}
-         <link rel="stylesheet" href="{% static 'css/start.css' %}?ver=1.5" >
+         <link rel="stylesheet" href="{% static 'css/start.css' %}?ver=1.7" >
         <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Lato&display=swap" rel="stylesheet">
         <!--<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
         <!--header-->
-      <div class ="head">
+        <!-- <div class ="head">
         <ul class="header">
    
                 
@@ -23,7 +23,8 @@
                 
             </ul>
           
-        </div>
+        </div>-->
+     
     
     </head>
 
@@ -37,7 +38,7 @@
       <input type="text" class="search1" placeholder="카페를 찾으시나요?">
       <button type="submit" class="searchbtn" >
       <!--<img src="./img1.png" width="30px" height="30px">-->
-      <i class = "fa fa-search fa-lg" aria-hidden="true" ></i>
+      
       </button>
     </div>
   </div>
