--- a/cafeproject/startpage/static/css/start.css
+++ b/cafeproject/startpage/static/css/start.css
@@ -5,7 +5,7 @@ body {
   text-align: center;
 }
 i {
-  padding-top: 150px;
+  padding-top: 250px;
   display: block;
   width: 500px;
   color: #fff;
@@ -57,7 +57,7 @@ i {
   transform: translate(-50%, -50%);
 }
 
-.pull-right {
+.pull-right li {
   float: left;
   padding: 10px 10px;
   padding-right: 10px;
@@ -65,6 +65,12 @@ i {
   color: black;
   font-weight: bold;
   text-decoration: none;
+}
+.pull-right a {
+  color: #000000;
+  float: left;
+  display: inline;
+  font-weight: bold;
 }
 
 .header {
