--- a/cafeproject/searchapp/templates/index.html
+++ b/cafeproject/searchapp/templates/index.html
@@ -10,29 +10,20 @@
     <form action = "{% url 'result' %}" method="GET">
         <fieldset>
             <legend>location</legend>
-             {% for location in location_list %}
-             <input type = "radio" name = "location" value = "{{location.location}}">{{location.location}}
-             {% endfor %}
+            <input type="text" name = "location" placeholder = "location을 입력하세요">
         </fieldset>
         <fieldset>
             <legend>feature</legend>
-             {% for feature in feature_list %}
-             <input type = "radio" name = "feature" value= "{{feature.feature}}">{{feature.feature}}
-             {% endfor %}
-        </fieldset>
-        <fieldset>
-            <legend>star</legend>
-             {% for star in star_list %}
-             <input type = "radio" name = "star" value= "{{star.star}}">{{star.star}}
-             {% endfor %}
-        </fieldset>
+             <input type = "text" name = "feature" placeholder = "feature를 입력하세요">
+        </fieldset> 
         <br/>
         <input type="submit" value="tag searh">
     </form>
         <br/>
     <h2>현재 카페 목록</h2>
     {% for post_obj in post %}
-        <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}</li>
+    <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}
+    </li>
     {% endfor %}
 </body>
 </html>
