--- a/cafeproject/searchapp/templates/result.html
+++ b/cafeproject/searchapp/templates/result.html
@@ -9,26 +9,16 @@
 </head>
 
 <body>
-    <form action="{% url 'result' %}" method="GET">
+    <form action = "{% url 'result' %}" method="GET">
         <fieldset>
             <legend>location</legend>
-            {% for location in location_list %}
-            <input type="radio" name="location" value="{{location.location}}">{{location.location}}
-            {% endfor %}
+            <input type="text" name = "location" placeholder = "location을 입력하세요">
         </fieldset>
         <fieldset>
             <legend>feature</legend>
-            {% for feature in feature_list %}
-            <input type="radio" name="feature" value="{{feature.feature}}">{{feature.feature}}
-            {% endfor %}
-        </fieldset>
-        <fieldset>
-            <legend>star</legend>
-            {% for star in star_list %}
-            <input type="radio" name="star" value="{{star.star}}">{{star.star}}
-            {% endfor %}
-        </fieldset>
-        <br />
+             <input type = "text" name = "feature" placeholder = "feature를 입력하세요">
+        </fieldset> 
+        <br/>
         <input type="submit" value="tag searh">
     </form>
     <br />
@@ -37,16 +27,17 @@
     <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}
     </li>
     {% endfor %}
-    {% if obj_location == 'None' and obj_feature == 'None' %}
-    <h3 id = "result">location, feature 모두 None이기 때문에 다시 검색하셔야 합니다.</h3>
-    {% else %}
-    <h3 id = "result">location: "{{obj_location}}", feature: "{{obj_feature}}" 검색 결과입니다.</h3>
-        {% for post_obj in post %}
-            {% if post_obj.location == obj_location %}
-            <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}</li>
-            {% endif %}
-        {% endfor %}
-    {% endif %}
+    
+    {% for post_obj in post %}
+        {% if obj_location == post_obj.location %}
+        <h2>검색 성공</h2>
+        {% else %}
+        <h2>검색 실패</h2>
+        obj_location: {{obj_location}}
+        <br/>
+        post_obj.location: {{post_obj.location}}
+        {% endif %}
+    {% endfor %}
 </body>
 
 </html>
