--- a/cafeproject/searchapp/templates/result.html
+++ b/cafeproject/searchapp/templates/result.html
@@ -9,34 +9,64 @@
 </head>
 
 <body>
-    <form action = "{% url 'result' %}" method="GET">
+    <form action="{% url 'result' %}" method="GET">
+        <fieldset>
+            <legend>title</legend>
+            <input type="text" name="title" placeholder="title을 입력하세요" required>
+        </fieldset>
+        <br />
         <fieldset>
             <legend>location</legend>
-            <input type="text" name = "location" placeholder = "location을 입력하세요">
+            <input type="text" name="location" placeholder="location을 입력하세요" required>
         </fieldset>
+        <br />
         <fieldset>
             <legend>feature</legend>
-             <input type = "text" name = "feature" placeholder = "feature를 입력하세요">
-        </fieldset> 
-        <br/>
+            <input type="text" name="feature" placeholder="feature를 입력하세요" required>
+        </fieldset>
         <input type="submit" value="tag searh">
     </form>
     <br />
     <h2>현재 카페 목록</h2>
     {% for post_obj in post %}
-    <li>{{ post_obj.title }} - {{ post_obj.location }} (feature: {{ post_obj.feature }}) star: {{post_obj.starrate}}
-    </li>
+    <fieldset>
+        <legend>{{post_obj.title}}</legend>
+        location: {{post_obj.location}}
+        <br />
+        feature: {{post_obj.feature}}
+        <br />
+    </fieldset>
+    <br />
     {% endfor %}
-    
+
+    <h3>title: "{{obj_title}}, location: "{{obj_location}}", feature: "{{obj_feature}}" 에 대한 검색 결과 (공백이면 전부 출력)</h3>
+    <h4 id="none_result"></h4>
     {% for post_obj in post %}
-        {% if obj_location == post_obj.location %}
-        <h2>검색 성공</h2>
-        {% else %}
-        <h2>검색 실패</h2>
-        obj_location: {{obj_location}}
-        <br/>
-        post_obj.location: {{post_obj.location}}
-        {% endif %}
+    {% if post_obj.title == obj_title and post_obj.location == obj_location and post_obj.feature == obj_feature %}
+    <!-- 3개 다 입력 -->
+    <fieldset>
+        <legend>{{post_obj.title}}</legend>
+        location: {{post_obj.location}}
+        <br />
+        feature: {{post_obj.feature}}
+        <br />
+        description: {{post_obj.description}}
+        <br />
+    </fieldset>
+    <br />
+    {% endif %}
+    {% if post_obj.title == obj_title and post_obj.location == "" and post_obj.feature == "" %}
+    <fieldset>
+        <legend>{{post_obj.title}}</legend>
+        location: {{post_obj.location}}
+        <br />
+        feature: {{post_obj.feature}}
+        <br />
+        description: {{post_obj.description}}
+        <br />
+    </fieldset>
+    <br />
+    {% endif %}
     {% endfor %}
 </body>
 
