main update commit

--- a/cafeproject/accounts2/templates/signup.html
+++ b/cafeproject/accounts2/templates/signup.html
@@ -8,12 +8,13 @@
 
 {% load staticfiles %}
 
+
 {% block contents %}
 
 
-
+<center>
 <div class="container">
-    <h1>Sign Up!</h1>
+    <h1>SIGN UP</h1>
 
     <form method="POST" action="{% url 'signup'%}">
 
@@ -34,5 +35,6 @@
         <input class="btn btn-primary" type="submit" value="Sign Up!">
     </form>
 </div>
+</center>
 
 {% endblock %}
