--- a/cafeproject/mainpage/templates/main.html
+++ b/cafeproject/mainpage/templates/main.html
@@ -8,30 +8,78 @@
          <input type="text" name="input" class="input" id="search-input">
          <button type="reset" class="search" id="search-btn"></button>
          </form>-->
+
+{% load staticfiles %}
 {% block contents %}
 
-    
+
+
      <!--1-->
-     <div class="row">
-        {% for post in postss %}
-        
+
+     <br><br>
+
+     <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary"></strong>
+          <h3 class="mb-0"></h3>
+          <div class="mb-1 text-muted"></div>
+          <p class="card-text mb-auto"></p>
+          <a href="#" class="stretched-link"></a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-success"></strong>
+          <h3 class="mb-0">Post title</h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+    
+     
+     <!-- <div class = "row">
+      {% for post_main in main_post.all %}
+
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img class="card-img-top" src="{{ post.image.url }}" alt=" Card image cap">
+    
+            <img src="{{ post_main.image.url }}" alt="..." class="img-thumbnail">
             <div class="card-body">
-            <h5>{{ post.title }}</h5>
-              <p class="card-text">{{ post.summary }}</p>
+            <h5>{{ post_main.title }}</h5>
+              <p class="card-text">{{ post_main.summary }}</p>
+           
               <div class="d-flex justify-content-between align-items-center">
-              <small class="text-muted">카페 위치 넣는 자리 </small>
-                <a class="alert alert-danger" href="{% url 'detail' post.id %}" role="button"> 자세히 보기</a>
+               <small class="text-muted">{{post_main.area}}</small>
+                
                 
               </div>
             </div>
           </div>
         </div>
-        {% endfor %}
-    </div>
-
+   
+            {% endfor %}
+         </div>
+      </div>-->
+   
+    
+        
         <!--2--> 
         <div class="mt-5 pt-5">
             <div class="container">
