--- a/cafeproject/mainpage/templates/main.html
+++ b/cafeproject/mainpage/templates/main.html
@@ -21,15 +21,21 @@
      <div class="row mb-2">
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
+       
+        <!-- <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary"></strong>
           <h3 class="mb-0"></h3>
           <div class="mb-1 text-muted"></div>
           <p class="card-text mb-auto"></p>
           <a href="#" class="stretched-link"></a>
+        </div>-->
+        
+         <div class="col-auto d-none d-lg-block">
+          <img src="{% static "1.jpeg"%}"class="bd-placeholder-img" width="300" height="250">
         </div>
+
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img src="{% static "1.jpeg"%}"class="bd-placeholder-img" width="300" height="250">
         </div>
       </div>
     </div>
@@ -43,7 +49,7 @@
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img src="{% static "2.jpeg"%}"class="bd-placeholder-img" width="300" height="250">
         </div>
       </div>
     </div>
