--- a/cafeproject/mainpage/templates/base.html
+++ b/cafeproject/mainpage/templates/base.html
@@ -50,14 +50,17 @@
             
             <li class="pull-left"><a href="{% url 'signup' %}">signup</a></li>
             <li class="pull-left"><a href="{% url 'login' %}">login</a></li>
-            <li class="pull-left"><a href="{% url 'logout' %}">logout</a></li>
             <li class="pull-left"><a href="{% url 'post' %}">POST</a></li>
+            <li class="pull-left"><a href="{% url 'main' %}">HOME</a></li>
 
 
             {% if user.is_authenticated %}
+            <li class="pull-left"><a href="{% url 'logout' %}">logout</a></li>
+            <li class="pull-left"><a href="{% url 'post' %}">POST</a></li>
             <li class="pull-left"><a href="{% url 'post' %}">환영합니다. {{ user.username }} 님!</a></li>
             <form id="logout" method="POST" action="{% url 'logout' %}">
                 {% csrf_token %} <input type="hidden" />
+            <li class="pull-left"><a href="{% url 'main' %}">HOME</a></li>
             </form>
             
             {% endif %}
